Closed
Bug 866579
Opened 12 years ago
Closed 12 years ago
Dromaeo CSS regression from bug 860524
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
mozilla23
People
(Reporter: roc, Assigned: roc)
References
Details
Attachments
(1 file, 1 obsolete file)
3.14 KB,
patch
|
mattwoodrow
:
review+
|
Details | Diff | Splinter Review |
Regression: Mozilla-Inbound-Non-PGO - Dromaeo (CSS) - Ubuntu HW 12.04 - 3.92% decrease
--------------------------------------------------------------------------------------
Previous: avg 3541.793 stddev 26.417 of 12 runs up to revision fad77e38f79e
New : avg 3403.048 stddev 41.458 of 12 runs since revision d13fc07e67af
Change : -138.745 (3.92% / z=5.252)
Graph : http://mzl.la/ZOJ5wU
Changeset range: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=fad77e38f79e&tochange=d13fc07e67af
Changesets:
* http://hg.mozilla.org/integration/mozilla-inbound/rev/d13fc07e67af
: Robert O'Callahan <robert@ocallahan.org> - Bug 860524. Remove hacky (and buggy) pseudo-destruction of DisplayItemClips created by GetCurrentClip; ensure that they're all destroyed properly when the arena goes away, by tracking them explicitly in nsDisplayListBuilder. r=mattwoodrow
: http://bugzilla.mozilla.org/show_bug.cgi?id=860524
Assignee | ||
Comment 1•12 years ago
|
||
Baseline try push: https://tbpl.mozilla.org/?tree=Try&rev=97f850c144bf
Regressing try push: https://tbpl.mozilla.org/?tree=Try&rev=4dc8404099eb
Assignee | ||
Comment 2•12 years ago
|
||
With proposed patch: https://tbpl.mozilla.org/?tree=Try&rev=cf28f863e559
Assignee | ||
Comment 3•12 years ago
|
||
Fixes regression.
Assignee: nobody → roc
Attachment #742955 -
Flags: review?(matt.woodrow)
Updated•12 years ago
|
Attachment #742955 -
Flags: review?(matt.woodrow) → review+
Assignee | ||
Comment 4•12 years ago
|
||
This patch causes leaks to be reported. The problem is that when DisplayListClipState::GetCurrentCombinedClip has to intersect two kinds of clipping, it first calls AllocateDisplayItemClip passing in the first clip and then modifies the result by intersecting with the second clip. That intersection can add rounded rects, but AllocateDisplayItemClip already decided not to put the DisplayItemClip in the cleanup list based on the fact that it didn't have rounded rects.
Modifying the result of AllocateDisplayItemClip is bogus, and AllocateDisplayItemClip should return a const pointer to fix this.
Assignee | ||
Comment 5•12 years ago
|
||
Attachment #745410 -
Flags: review?(matt.woodrow)
Assignee | ||
Updated•12 years ago
|
Attachment #742955 -
Attachment is obsolete: true
Updated•12 years ago
|
Attachment #745410 -
Flags: review?(matt.woodrow) → review+
Assignee | ||
Comment 6•12 years ago
|
||
Comment 7•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
You need to log in
before you can comment on or make changes to this bug.
Description
•