Bug 866579. Don't bother adding an arena-allocated DisplayItemClip to mDisplayItemClipsToDestroy if its destructor isn't going to do anything interesting. r=mattwoodrow

--HG--
extra : rebase_source : b8b64d9697cd2f19a42ff751cbfb7a1566f28209